test/Fail/Issue2579.agda

module _ where

import DummyModule Set Set
